# mlir-netopt

./: .gitignore  .gitmodules  CMakeLists.txt  MLIR_AffineAnalysis_DeepDive.md  MLIR_DataflowAnalysis_QuickRef.md  MLIR_DataflowAnalysis_Research.md  README.md  build.sh  dlq-plan.md  format.sh  plan.md  scr-nsdi25.txt  setup.sh
src/: CMakeLists.txt  spmcc.cpp
src/Dialect/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h
src/analysis/: CMakeLists.txt
src/analysis/LoopStateAccessAnalysis/: CMakeLists.txt  LoopStateAccessAnalysis.cpp  LoopStateAccessAnalysis.h
src/analysis/SingleProducerConstraint/: CMakeLists.txt
src/dialect/: CMakeLists.txt  SpmcDialect.cpp  SpmcDialect.h  SpmcDialect.td  SpmcOps.cpp  SpmcOps.h  SpmcOps.td  SpmcTypes.cpp  SpmcTypes.h  SpmcTypes.td
src/transform/: CMakeLists.txt  DeadQueueElimination.cpp  DeadQueueElimination.h
src/transform/DeadQueueElimination/: CMakeLists.txt  DeadQueueElimination.cpp  DeadQueueElimination.h  Passes.h  Passes.td
src/transform/ScrParallelTiling/: CMakeLists.txt  Passes.h  Passes.td  ScrParallelTiling.cpp  ScrParallelTiling.h
src/transform/StateIndependentParallelization/: CMakeLists.txt  Passes.h  Passes.td  StateIndependentParallelization.cpp  StateIndependentParallelization.h
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt  spmc.cpp  spmc.h
test/mlir/: affine-tile.mlir  dead-queue-elim.mlir  scr-parallel-tile.mlir  spmc-ops.mlir  state-ind-parallel.mlir
